fixed a few spacing issues

--- a/less/index.less
+++ b/less/index.less
@@ -191,7 +191,6 @@ html{
 		padding-top: 3%;
     flex-wrap: nowrap;
     flex-direction: row;
-    // justify-content: center;
     align-items: center;
     justify-content: space-between;
 
@@ -204,7 +203,6 @@ html{
 		}
 		.aboutMeBoxes{
 			width: 45%;
-			// padding-left: 1%;
 			padding-bottom: 5%;
 			flex-wrap: nowrap;
 			flex-direction: row;
@@ -238,7 +236,6 @@ html{
 		.flexWorkHistory();
 		width: 85%;
 		padding-bottom: 3%;
-		// padding-left: 1%;
 		justify-content: space-between;
 
 		h2 {
@@ -258,13 +255,16 @@ html{
 					padding: 3%;
 				}
 				thead{
-					font-size: 2.7rem;
-					font-weight: bold;
+				width: 100%;
+    		font-size: 2.7rem;
+   			font-weight: bold;
+    		justify-content: space-evenly;
+    		align-items: center;
 				}
 				tbody{
 					font-size: 2.3rem;
 				}
-			}
+		}
 	}
 
 		footer{
